tweaking config, hoping for releases to be easier.