@@ -456,46 +456,22 @@
 									<quiet>true</quiet>
 									<aggregate>false</aggregate>
 									<links>
-										<link>
-											http://docs.oracle.com/javase/7/docs/api/
-										</link>
-										<link>
-											http://jakarta.apache.org/commons/collections/apidocs-COLLECTIONS_3_0/
-										</link>
-										<link>
-											http://jakarta.apache.org/commons/dbcp/apidocs/
-										</link>
-										<link>
-											http://jakarta.apache.org/commons/fileupload/apidocs/
-										</link>
-										<link>
-											http://jakarta.apache.org/commons/httpclient/apidocs/
-										</link>
-										<link>
-											http://commons.apache.org/logging/apidocs/
-										</link>
-										<link>
-											http://jakarta.apache.org/commons/pool/apidocs/
-										</link>
-										<link>
-											http://logging.apache.org/log4j/docs/api/
-										</link>
-										<link>
-											http://jakarta.apache.org/regexp/apidocs/
-										</link>
-										<link>
-											http://jakarta.apache.org/velocity/api/
-										</link>
-										<link>
-											http://dsd.lbl.gov/~hoschek/colt/api/
-										</link>
-										<link>
-											http://static.springsource.org/spring/docs/3.0.x/javadoc-api/
-										</link>
-										<link>
-											http://docs.jboss.org/hibernate/orm/3.5/api/
-										</link>
+										<link>http://chibi.ubc.ca/faculty/pavlidis/basecode/apidocs/</link>
+										<link>http://docs.oracle.com/javase/7/docs/api/</link>
+										<link>http://commons.apache.org/proper/commons-dbcp/apidocs/</link>
+										<link>http://commons.apache.org/proper/commons-dbcp/apidocs/</link>
+										<link>http://commons.apache.org/proper/commons-fileupload/apidocs/</link>
+										<link>http://hc.apache.org/httpclient-3.x/apidocs/</link>
+										<link>http://commons.apache.org/proper/commons-logging/apidocs/</link>
+										<link>http://jakarta.apache.org/commons/pool/apidocs/</link>
+										<link>http://dsd.lbl.gov/~hoschek/colt/api/</link>
+										<link>http://static.springsource.org/spring/docs/3.0.x/javadoc-api/</link>
+										<link>http://docs.jboss.org/hibernate/orm/3.5/api/</link>
 									</links>
+									<additionalJOptions>
+										<additionalJOption>-J-Xmx1.2g</additionalJOption>
+										<additionalJOption>-J-XX:MaxPermSize=512m</additionalJOption>
+									</additionalJOptions>
 								</configuration>
 							</configuration>
 						</plugin>
@@ -520,6 +496,7 @@
 						<plugin>
 							<groupId>org.codehaus.mojo</groupId>
 							<artifactId>jdepend-maven-plugin</artifactId>
+							<version>2.0-beta-2</version>
 						</plugin>
 					</reportPlugins>
 				</configuration>
@@ -591,35 +568,8 @@
 			</releases>
 		</repository>
 		<repository>
-			<id>spring</id>
-			<name>Spring Portfolio Repository</name>
-			<url>http://s3.amazonaws.com/maven.springframework.org/release</url>
-			<layout>default</layout>
-			<snapshots>
-				<enabled>false</enabled>
-				<updatePolicy>never</updatePolicy>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-				<updatePolicy>never</updatePolicy>
-			</releases>
-		</repository>
-		<repository>
 			<id>jboss</id>
 			<url>https://repository.jboss.org/nexus/content/repositories/releases</url>
-			<layout>default</layout>
-			<snapshots>
-				<enabled>false</enabled>
-				<updatePolicy>never</updatePolicy>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-				<updatePolicy>never</updatePolicy>
-			</releases>
-		</repository>
-		<repository>
-			<id>mvnrepository.com</id>
-			<url>http://mvnrepository.com/artifact</url> <!-- quartz 1.6.5... -->
 			<layout>default</layout>
 			<snapshots>
 				<enabled>false</enabled>
